src/test/resources/private/typechecking/pass/assign/pass04.jova
class Cls{
    public int intmem;
    public bool boolmem;
    public string strmem;
}

class Somecls{

    public Cls cls;
}

class Exp{
    private Cls cls;
    private Somecls somecls;
    private string str;

    public bool fun(int x){
        int myint;
        bool b;

        myint = x;

        cls = this.somecls.cls;
        x = this.somecls.cls.intmem;
        b = this.somecls.cls.boolmem;
        this.str = this.somecls.cls.strmem;

        return b;
    }
}